# uart-to-ftdi-i2c

./: .gitignore  README.md  pyproject.toml
uart_to_ftdi_i2c/: uart_to_ftdi_i2c.py
uart_to_ftdi_i2c/pylibmpsse_i2c/: __init__.py  ctypes_veneer.py  mytypes.py
